# ComputationalMethods

./: .gitignore  CMakeLists.txt  README.md  Run_MSVC.bat  Run_MinGW.bat
datas/: Amat5.m  Amat6.m  Amat7.m  Amat8.m  Lmat1.m  Lmat2.m  Umat1.m  Umat2.m  bvec9.m  xvec3.m  xvec8.m
main/: find_poly.cpp  lu_gauss.cpp  make_lu.cpp  make_qr.cpp  qr_gauss.cpp
math/: Math.cpp
math/func/: Algorithm.h  Func.h  Func.inl  Transform.h
math/type/: Mat.inl
tool/: Tool.h
tool/profiler/: Profiler.cpp  Profiler.h  Time.cpp  Time.h
tool/serializer/: Deserializer.cpp  Deserializer.h  Deserializer.inl  Serializer.cpp  Serializer.h  Serializer.inl
